project('advanced', 'c',  default_options : ['c_std=gnu11'])

cc = meson.get_compiler('c')

# add_project_arguments('-Wall', language: 'c')
# add_project_arguments('-Wextra', language: 'c')
# add_project_arguments('-Werror', language: 'c')


subdir('01-intro')
# subdir('02')
# subdir('03')
# subdir('04')
# subdir('05')
# subdir('06')
# subdir('07')
# subdir('08')


