src_files = {
    'hw' : 'hw.c',
    'pid' : 'pid.c',
    'simple-cat' : 'simple-cat.c',
    'simple-cat2' : 'simple-cat2.c',
    'simeple-ls' : 'simple-ls.c',
    'simple-shell' : 'simple-shell.c',
    'simple-shell2' : 'simple-shell2.c',
    'welcome' : 'welcome.c',
}

foreach name, sources : src_files
    executable(name, sources)
endforeach


